Fix text overlow issues on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -1058,7 +1058,7 @@ body {
     }
 
     .slider__sub-title {
-        width: 194px;
+        width: 192px;
     }
 
     .slider__media {
@@ -1135,7 +1135,7 @@ body {
     }
 
     .updates__text {
-        width: 220px;
+        width: 218px;
     }
 
     .updates__link {
